k8s/dev/test.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: poppin
  namespace: poppin
spec:
  mtls:
    mode: DISABLE
